﻿0.1.2 [TBD]

0.1.1 [2017-02-13]
[*] Fix reference to Saritasa.Tools.Domain .

0.1.0 [2017-02-11]
[+] Initial release.