@@ -35,7 +35,7 @@
         "System.Data": ""
       },
       "dependencies": {
-        "Microsoft.EntityFrameworkCore": "1.1.0"
+        "Microsoft.EntityFrameworkCore": "1.1.1"
       }
     },
     "net461": {
@@ -43,20 +43,20 @@
         "System.Data": ""
       },
       "dependencies": {
-        "Microsoft.EntityFrameworkCore": "1.1.0"
+        "Microsoft.EntityFrameworkCore": "1.1.1"
       }
     },
     "netcoreapp1.1": {
       "dependencies": {
-        "Microsoft.NETCore.App": "1.1.0",
-        "Microsoft.EntityFrameworkCore": "1.1.0",
+        "Microsoft.NETCore.App": "1.1.1",
+        "Microsoft.EntityFrameworkCore": "1.1.1",
         "System.Reflection.Emit.Lightweight": "4.3.0"
       }
     },
     "netstandard1.6": {
       "dependencies": {
         "NETStandard.Library": "1.6.1",
-        "Microsoft.EntityFrameworkCore": "1.1.0",
+        "Microsoft.EntityFrameworkCore": "1.1.1",
         "System.Reflection.Emit.Lightweight": "4.3.0"
       }
     }
