@@ -1,5 +1,6 @@
 ﻿0.1.1 [2017-02-11]
-[+] Update NLog dependency to 5.0.0-beta05 and 4.4.2 .
+[+] Update NLog dependency to 5.0.0-beta06 and 4.4.3 .
+[*] Update Microsoft.NETCore.App to 1.1.1 .
 
 0.1.0 [2016-11-29]
 [+] Initial release.
